--- a/style.css
+++ b/style.css
@@ -38,6 +38,16 @@ h1:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    opacity: 0;
 }
 
 .card {
@@ -85,9 +95,11 @@ h1:hover {
 }
 
 .card-image>.svg,
-.card-image>img {
+.card-image>img,
+canvas {
     transition: 200ms ease-in-out;
 }
+
 
 .card-image>.svg.fade {
     opacity: 0
